--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,32 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+
 }
 
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  --background: #ffffff;
+  --foreground: #171717;  }
   }
+
+  /* Apply your default font */
+  body {
+      background: var(--background);
+     color: var(--foreground);
+    
+  }
+  p{
+    font-family: var(--font-ranade);
+  }
+  h1 , h2{
+  font-family: var(--font-excon);
+}
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
