--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,6 @@
 @import "tailwindcss";
 
-:root {
 
-}
 
 @theme inline {
   --color-background: var(--background);
@@ -13,9 +11,9 @@
 @layer base {
   :root {
   --background: #ffffff;
-  --foreground: #171717;  }
+  --foreground: #171717;
   }
-
+  
   /* Apply your default font */
   body {
       background: var(--background);
